--- a/styles.css
+++ b/styles.css
@@ -75,9 +75,12 @@ button {
 
 /* Estilos generales para el menú */
 nav {
-    background-color: #fff; /* Fondo blanco para el menú */
-    padding: 10px 20px; /* Espaciado alrededor del menú */
-  }
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  overflow-x: hidden;
+}
+
   
   .menu {
     list-style-type: none; /* Elimina los puntos de la lista */
@@ -213,27 +216,31 @@ nav {
   flex: 1 1 300px;
 }
 
-.icono-whatsapp {
-  width: 24px;
-  height: 24px;
-  vertical-align: middle;
-  margin-right: 8px;
-}
-
 .btn-whatsapp {
-  display: inline-block;
-  padding: 12px 20px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 16px;
   background-color: #25D366;
   color: white;
   text-decoration: none;
   border-radius: 8px;
-  font-weight: bold;
-  transition: background-color 0.3s ease;
+  max-width: 80%;
+  width: auto;
+  gap: 10px;
+  font-size: 16px;
+  transition: background-color 0.3s;
 }
 
 .btn-whatsapp:hover {
   background-color: #1ebe5b;
 }
+
+.icono-whatsapp {
+  width: 24px;
+  height: 24px;
+}
+
 
 
 .galeria {
@@ -259,8 +266,20 @@ nav {
   margin-bottom: 20px;
 }
 
+.map-container {
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.map-container iframe {
+  width: 100%;
+  height: 300px;
+  border: 0;
+}
+
 /* Estilos responsive para móviles */
-@media (max-width: 768px) {
+@media (max-width: 600px) {
   .lista-servicios {
     grid-template-columns: 1fr; /* Servicios en una sola columna */
   }
@@ -274,8 +293,10 @@ nav {
   }
 
   .contacto-flex {
-    flex-direction: column; /* Mapa y contacto uno debajo del otro si vuelves a usar esta versión */
-  }
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 
   .servicio img {
     max-width: 100%;
@@ -283,9 +304,17 @@ nav {
   }
 
   .btn-whatsapp {
-    width: 100%; /* Botón ocupa todo el ancho */
+    width: 80%; /* Botón ocupa todo el ancho */
     text-align: center;
   }
+
+
+  .whatsapp-button img {
+  width: 80%;
+  height: auto;
+  display: block;
+  }
+
 
   iframe {
     height: 250px; /* Mapa más alto en móvil */
@@ -302,5 +331,18 @@ nav {
   p {
     font-size: 16px;
   }
+
+
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  nav ul li {
+    margin: 10px 0;
+  }
 }
+
+  
+
 
